# pgo

./: .classpath  .gitignore  .project  .scalafix.conf  .scalafmt.conf  .travis.yml  README.md  antithesis.mill  build.mill  build.sbt  build.xml  cleanup.xml  codetemplates.xml  config-sample.json  dqueuegen.sc  format_src.sh  format_src_check.sh  formatter.xml  go.work  go.work.sum  go_cleanup.sc  go_versions.sc  load_balancer.cfg  load_balancer.json  load_balancer.tla  main.go  my_lock.go  pgo-code-style.epf  pgo.importorder  pgo.sh  project.scala  raftkvsgen.sc  run_traceview.sh  setup.sc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish.yml
antithesis/: README.md  package.mill
antithesis/dqueue/: docker-compose.yaml
antithesis/raftkvs/: Dockerfile.client  Dockerfile.config  Dockerfile.server  config.yaml  docker-compose.yaml  finally_tracelink.sh  singleton_driver_random_workload.sh
antithesis/wiredtiger/: Dockerfile.config  Dockerfile.test  MCStorageValidate.cfg  MCStorageValidate.tla  StorageValidate.tla  __TraceOps.tla  build_all.sh  docker-compose.yaml  launch_dbg.sh  singleton_driver_wiredtiger.sh
benchmark/: cart_graph.p  convergence.py  graph.p  make_graphs.sh  run_benchmark.sh  run_benchmarks.sh  run_convergence.sh  run_convergences.sh
benchmark/common/: go.mod  reporttime.go
benchmark/echo/: README.md  benchmark.go  echo.tla  go.mod  handwritten.go  pgo.go
benchmark/etcdbench/: go.mod  go.sum  main.go
benchmark/gcounter/: gcounter_test.go  go.mod  go.sum
benchmark/graphscripts/: 2pc_graphs.p  base  cart_graph.p  counter_compare.p
benchmark/kvs/: go.mod  go.sum  kvs.go  kvs.tla  kvs_test.go
benchmark/lock/: go.mod  go.sum  lock.go  lock.tla  lock_test.go  test_correctness.py  test_correctness.sh
benchmark/shcounter/: go.mod  shcounter_test.go
benchmark/shopcart/: go.mod  go.sum  shopcart.go  shopcart.tla  shopcart_test.go
benchmark/shopcart-crdt/: README.md  benchmark.go  go.mod  shopcart.go  shopcart.tla  shopcart_crdt_test.go  shopcart_test.go
distsys/: archetype_resource.go  archetypeinterface.go  archetyperesource.go  archetypes.go  binding.go  distsys.go  distsys_test.go  effect.go  etcd.go  eval.go  fairness.go  go.mod  go.sum  mpcal.go  mpcal_context.go  mpcalctx.go  resource.go  state_ownership.go  tlaplus.go  tlaplus_test.go
distsys/archetype_resources/: channels.go  filesystem.go  incremental_map.go  tcp_mailboxes.go
distsys/channels/: gochan.go
distsys/constants/: constants.go
distsys/controlflow/: controlflow.go
distsys/dnet/: fifomboxes_ctx.go  fifosender.go
distsys/hashmap/: hashmap.go
distsys/locals/: locals.go
distsys/resources/: aworset.go  aworset_test.go  channels.go  conn.go  crdt.go  dummy.go  fd.go  filesystem.go  gcounter.go  hashmap.go  incmap.go  incrementalmap.go  localshared.go  lww.go  mailboxes.go  nestedarch.go  persistent.go  placeholder.go  relaxedmailboxes.go  tcpmailboxes.go  twopc.go  twopc_test.go
distsys/sketch/: dqueue.go
distsys/tla/: builtins.go  symbols.go  value.go  value_test.go  vclock.go  vclock_test.go
distsys/trace/: event.go  recorder.go  state.go  vclock.go  vclock_sink.go
distsys/util/: async_ctx.go  common.go  exclusivewrite_interp.go  singlepath_interp.go  translation_interp.go
doc/manual/: Makefile  paper.bib  paper.tex
examples/: 2pc.tla  DijkstraMutex.tla  Euclid.tla  Queens.tla  counter.tla  dqueue.tla  pgo2pc.tla  round_robin.tla
examples/configs/: 2pc-stateserver.json  DijkstraMutex.json  Euclid.json  centralized-etcd.json  centralized.json  counter-stateserver.json  dijkstra-mutex.json  doslib.json  dqueue.json  etcd.json  local.json  state-server.json
examples/go/: DijkstraMutex.go  Euclid.go  Queens.go
examples/mpcal/: README.md  consensus_kv.tla  dqueue.tla  load_balancer.tla  paxos.json  paxos.tla  raft.json  raft.tla  raftkv.tla  replicated_kv.tla
examples/output/: dijkstra-mutex.go  euclid.go
lib/tla/: .classpath  .project
omnilink/: .gitignore  GitRepo.mill  GitRepoModule.mill  README.md  createTables.sql  model_hpp.nix  omnilink-lib.hpp  package.mill  static_overlay.nix  util.mill
omnilink/atomic/: Atomic.tla  MCAtomic.cfg  MCAtomic.tla  MCAtomicValidate.cfg  MCAtomicValidate.tla  package.mill  workload.nix
omnilink/chromatictree/: ChromaticTree.cfg  main.cpp
omnilink/concurrentqueue/: CMakeLists.txt  ConcurrentQueue.tla  ConcurrentQueueAPI.cfg  ConcurrentQueueAPI.tla  MCConcurrentQueue.cfg  MCConcurrentQueue.tla  MCConcurrentQueueAPI.cfg  MCConcurrentQueueAPI.tla  MCConcurrentQueueAPIValidate.cfg  MCConcurrentQueueAPIValidate.tla  MCConcurrentQueueValidate.cfg  MCConcurrentQueueValidate.tla  concurrentqueue.nix  flake.nix  main.cpp  package.mill  workload.nix
omnilink/concurrentqueue/workload/: CMakeLists.txt  main.cpp
omnilink/evaldb/: package.mill
omnilink/lib/: CMakeLists.txt  OmniLinkConfig.cmake.in  flake.nix  package.mill  package.nix  shell.nix
omnilink/lib/include/omnilink/: deoptimize.hpp  logger.hpp  overloads.hpp  pack.hpp  workload.hpp
omnilink/lib/test/: test_packer.cpp
omnilink/nativebuilds/: package.mill
omnilink/plots/: env.nix  flake.nix  package.mill  setbench_porcupine_mem_plt.py  setbench_porcupine_mem_threads_plt.py  setbench_porcupine_time_plt.py  setbench_porcupine_time_threads_plt.py
omnilink/porcupine/: flake.nix  go.mod  go.sum  main.go  package.nix
omnilink/setbench/: CMakeLists.txt  ChromaticTree.cfg  ChromaticTree.tla  MCChromaticTreeValidate.cfg  MCChromaticTreeValidate.tla  MCSetBenchValidate.cfg  SetBench.tla  (+5 more)
omnilink/setbench/workload/: CMakeLists.txt  main.cpp
omnilink/wiredtiger/reflocking_wrapper/: CMakeLists.txt  omnilink_reflocking_wrapper-config.cmake.in  reflocking_wrapper.cxx  reflocking_wrapper.h
omnilink/wiredtiger/workload/: CMakeLists.txt  main.cpp
pages/: page2.html
systems/: .gitignore  README.md
tlc/: package.mill
tracelink-workload/: .gitignore  MCStorageValidate.cfg  MCStorageValidate.tla  StorageValidate.cfg  __TraceOps.tla  createTables.sql  main.cpp  package.mill  tracelink-workload.hpp
traceview/: package.mill
(+1950 files in other folders)
